--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ report.fdb_latexmk
 report.fls
 report.log
 report.synctex.gz
+P1/db
+P1/incremental_db/compiled_partitions
+P1/output_files
+P1/simulation/modelsim
