--- a/P1/Lab3P1.qsf
+++ b/P1/Lab3P1.qsf
@@ -488,3 +488,4 @@ set_location_assignment PIN_E16 -to led5[4]
 set_location_assignment PIN_D17 -to led5[5]
 set_location_assignment PIN_C17 -to led5[6]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE fsm_tb.vhd
