--- a/P1/Lab3P1.qsf
+++ b/P1/Lab3P1.qsf
@@ -489,4 +489,5 @@ set_location_assignment PIN_D17 -to led5[5]
 set_location_assignment PIN_C17 -to led5[6]
 set_global_assignment -name VHDL_FILE fsm_tb.vhd
 set_global_assignment -name VHDL_FILE top_level_tb.vhd
+set_global_assignment -name VHDL_FILE stitt_tb.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
